<resources>
    <string name="app_name">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="txt_registro_titulo">INGRESE SUS DATOS</string>
    <string name="txt_registro_correo">Correo electrónico</string>
    <string name="txt_registro_fecnacimiento">Fecha de nacimiento</string>
    <string name="txt_registro_user">Elige nombre de usuario</string>
    <string name="txt_registro_facebook">o Regístrate con Facebook</string>
    <string name="txt_registro_o_mail">o Registro con correo electrónico</string>
    <string name="txt_registro_password">Elige contraseña</string>


    <string name="btn_inicio_facebook">Iniciar sesión con Facebook</string>
    <string name="txt_inicio_o">o</string>
    <string name="txt_inicio_forget">¿Se te ha olvidado la contraseña?</string>
    <string name="txt_inicio_user">Nombre de usuario</string>
    <string name="txt_inicio_pswd">Contraseña</string>

    <string name="btn_login_ingresar">INICIAR SESIÓN</string>
    <string name="btn_login_registrar">REGISTRARTE</string>

    <string name="btn_cancelar">CANCELAR</string>

    <string name="sexo">Sexo</string>
    <string-array name="sexo_array">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string name="edad">Fecha de Nacimiento</string>
</resources>
