<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn_inicio_facebook"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_inicio_o"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_inicio_user"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/txt_registro_user"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/txt_registro_password"
            android:id="@+id/id_inicio_passwd"
            android:layout_weight="0.75"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/btn_login_ingresar"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_inicio_forget"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

</LinearLayout>